[tool.poetry]
name = "plugin-gui"
version = "0.1.0"
description = ""
authors = ["Martin Esparza <mesparza@inbrain-neuroelectronics.com>"]
readme = "README.md"
packages = [{include = "plugin_gui"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
